Añade entrypoint.sh para php_fpm Actualización documentación Actualización especificación
